# shorelark

./: README  rust-toolchain.toml
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  gaussian_mutation.rs  lib.rs  roulette_wheel.rs  statistics.rs  uniform_crossover.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
www/: index.html  index.js  package-lock.json  package.json
