[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }

lib-simulation = { path = "../simulation" }

[lib]
crate-type = ["cdylib"]
